@@ -1,6 +1,6 @@
 //
 // ========================================================================
-// Copyright (c) 1995-2022 Mort Bay Consulting Pty Ltd and others.
+// Copyright (c) 1995 Mort Bay Consulting Pty Ltd and others.
 //
 // This program and the accompanying materials are made available under the
 // terms of the Eclipse Public License v. 2.0 which is available at
@@ -15,33 +15,36 @@ package org.eclipse.jetty.ee10.webapp;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.JarURLConnection;
 import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.Iterator;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.jar.JarEntry;
-import java.util.jar.JarFile;
+import java.util.function.Consumer;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-import org.eclipse.jetty.server.Server;
-import org.eclipse.jetty.util.PatternMatcher;
+import org.eclipse.jetty.util.FileID;
 import org.eclipse.jetty.util.StringUtil;
-import org.eclipse.jetty.util.resource.EmptyResource;
+import org.eclipse.jetty.util.URIUtil;
+import org.eclipse.jetty.util.UriPatternPredicate;
+import org.eclipse.jetty.util.resource.MountedPathResource;
 import org.eclipse.jetty.util.resource.Resource;
-import org.eclipse.jetty.util.resource.ResourceCollection;
+import org.eclipse.jetty.util.resource.ResourceCollators;
+import org.eclipse.jetty.util.resource.ResourceFactory;
+import org.eclipse.jetty.util.resource.ResourceUriPatternPredicate;
+import org.eclipse.jetty.util.resource.Resources;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -76,74 +79,7 @@ public class MetaInfConfiguration extends AbstractConfiguration
     public static final String METAINF_RESOURCES = "org.eclipse.jetty.resources";
     public static final String CONTAINER_JAR_PATTERN = "org.eclipse.jetty.server.webapp.ContainerIncludeJarPattern";
     public static final String WEBINF_JAR_PATTERN = "org.eclipse.jetty.server.webapp.WebInfIncludeJarPattern";
-    public static final List<String> __allScanTypes = (List<String>)Arrays.asList(METAINF_TLDS, METAINF_RESOURCES, METAINF_FRAGMENTS);
-
-    /**
-     * ContainerPathNameMatcher
-     *
-     * Matches names of jars on the container classpath
-     * against a pattern. If no pattern is specified, no
-     * jars match.
-     */
-    public class ContainerPathNameMatcher extends PatternMatcher
-    {
-        protected final WebAppContext _context;
-        protected final String _pattern;
-
-        public ContainerPathNameMatcher(WebAppContext context, String pattern)
-        {
-            if (context == null)
-                throw new IllegalArgumentException("Context null");
-            _context = context;
-            _pattern = pattern;
-        }
-
-        public void match(List<URI> uris) throws Exception
-        {
-            if (uris == null)
-                return;
-            match(_pattern, uris.toArray(new URI[uris.size()]), false);
-        }
-
-        @Override
-        public void matched(URI uri) throws Exception
-        {
-            _context.getMetaData().addContainerResource(Resource.newResource(uri));
-        }
-    }
-
-    /**
-     * WebAppPathNameMatcher
-     *
-     * Matches names of jars or dirs on the webapp classpath
-     * against a pattern. If there is no pattern, all jars or dirs
-     * will match.
-     */
-    public class WebAppPathNameMatcher extends PatternMatcher
-    {
-        protected final WebAppContext _context;
-        protected final String _pattern;
-
-        public WebAppPathNameMatcher(WebAppContext context, String pattern)
-        {
-            if (context == null)
-                throw new IllegalArgumentException("Context null");
-            _context = context;
-            _pattern = pattern;
-        }
-
-        public void match(List<URI> uris)
-            throws Exception
-        {
-            match(_pattern, uris.toArray(new URI[uris.size()]), true);
-        }
-
-        @Override
-        public void matched(URI uri) throws Exception
-        {
-            _context.getMetaData().addWebInfResource(Resource.newResource(uri));
-        }
-    }
+    public static final List<String> __allScanTypes = Arrays.asList(METAINF_TLDS, METAINF_RESOURCES, METAINF_FRAGMENTS);
 
     /**
      * If set, to a list of URLs, these resources are added to the context
@@ -153,7 +89,7 @@ public class MetaInfConfiguration extends AbstractConfiguration
 
     public MetaInfConfiguration()
     {
-        addDependencies(WebXmlConfiguration.class);
+        super(new Builder().addDependencies(WebXmlConfiguration.class));
     }
 
     @Override
@@ -176,13 +112,17 @@ public class MetaInfConfiguration extends AbstractConfiguration
      * and apply an optional filter. The filter is a pattern applied to the
      * full jar or directory names. If there is no pattern, then no jar
      * or dir is considered to match.
-     *
+     * <p>
      * Those jars that do match will be later examined for META-INF
      * information and annotations.
-     *
+     * <p>
      * To find them, examine the classloaders in the hierarchy above the
      * webapp classloader that are URLClassLoaders. For jdk-9 we also
      * look at the java.class.path, and the jdk.module.path.
+     * <p>
+     * Any {@code jar:file:} resources found will be mounted in the
+     * {@link ResourceFactory} of the context.
+     * </p>
      *
      * @param context the WebAppContext being deployed
      */
@@ -194,30 +134,43 @@ public class MetaInfConfiguration extends AbstractConfiguration
         if (StringUtil.isBlank(pattern))
             return; // TODO review if this short cut will allow later code simplifications
 
+        ResourceFactory resourceFactory = context.getResourceFactory();
+
         // Apply an initial name filter to the jars to select which will be eventually
         // scanned for META-INF info and annotations. The filter is based on inclusion patterns.
-        ContainerPathNameMatcher containerPathNameMatcher = new ContainerPathNameMatcher(context, pattern);
-        List<URI> containerUris = getAllContainerJars(context);
+        UriPatternPredicate uriPatternPredicate = new UriPatternPredicate(pattern, false);
+        Consumer<Resource> addContainerResource = (resource) ->
+        {
+            if (Resources.missing(resource))
+            {
+                if (LOG.isDebugEnabled())
+                    LOG.debug("Classpath URI doesn't exist: " + resource);
+            }
+            else
+            {
+                context.getMetaData().addContainerResource(resource);
+            }
+        };
 
+        List<URI> containerUris = getAllContainerJars(context);
         if (LOG.isDebugEnabled())
             LOG.debug("All container urls {}", containerUris);
-        containerPathNameMatcher.match(containerUris);
+        containerUris.stream()
+            .filter(uriPatternPredicate)
+            .map(resourceFactory::newResource)
+            .filter(Objects::nonNull)
+            .forEach(addContainerResource);
 
-        // When running on jvm 9 or above, we we won't be able to look at the application
+        // When running on jvm 9 or above, we won't be able to look at the application
         // classloader to extract urls, so we need to examine the classpath instead.
         String classPath = System.getProperty("java.class.path");
         if (classPath != null)
         {
-            List<URI> cpUris = new ArrayList<>();
-            String[] entries = classPath.split(File.pathSeparator);
-            for (String entry : entries)
-            {
-                File f = new File(entry);
-                cpUris.add(f.toURI());
-            }
-            if (LOG.isDebugEnabled())
-                LOG.debug("Matching java.class.path {}", cpUris);
-            containerPathNameMatcher.match(cpUris);
+            resourceFactory.split(classPath, File.pathSeparator)
+                .stream()
+                .filter(Objects::nonNull)
+                .filter(r -> uriPatternPredicate.test(URIUtil.unwrapContainer(r.getURI())))
+                .forEach(addContainerResource);
         }
 
         // We also need to examine the module path.
@@ -227,30 +180,17 @@ public class MetaInfConfiguration extends AbstractConfiguration
         String modulePath = System.getProperty("jdk.module.path");
         if (modulePath != null)
         {
-            List<URI> moduleUris = new ArrayList<>();
-            String[] entries = modulePath.split(File.pathSeparator);
-            for (String entry : entries)
-            {
-                File file = new File(entry);
-                if (file.isDirectory())
+            Stream.of(modulePath.split(File.pathSeparator))
+                .map(resourceFactory::newResource)
+                .filter(Objects::nonNull)
+                .filter(r -> uriPatternPredicate.test(r.getURI()))
+                .forEach(r ->
                 {
-                    File[] files = file.listFiles();
-                    if (files != null)
-                    {
-                        for (File f : files)
-                        {
-                            moduleUris.add(f.toURI());
-                        }
-                    }
-                }
-                else
-                {
-                    moduleUris.add(file.toURI());
-                }
-            }
-            if (LOG.isDebugEnabled())
-                LOG.debug("Matching jdk.module.path {}", moduleUris);
-            containerPathNameMatcher.match(moduleUris);
+                    if (r.isDirectory())
+                        r.list().forEach(i -> context.getMetaData().addContainerResource(i));
+                    else
+                        context.getMetaData().addContainerResource(r);
+                });
         }
 
         if (LOG.isDebugEnabled())
@@ -261,7 +201,7 @@ public class MetaInfConfiguration extends AbstractConfiguration
      * Finds the jars that are either physically or virtually in
      * WEB-INF/lib, and applies an optional filter to their full
      * pathnames.
-     *
+     * <p>
      * The filter selects which jars will later be examined for META-INF
      * information and annotations. If there is no pattern, then
      * all jars are considered selected.
@@ -273,39 +213,30 @@ public class MetaInfConfiguration extends AbstractConfiguration
     {
         //Apply filter to WEB-INF/lib jars
         String pattern = (String)context.getAttribute(WEBINF_JAR_PATTERN);
-        WebAppPathNameMatcher matcher = new WebAppPathNameMatcher(context, pattern);
+        ResourceUriPatternPredicate webinfPredicate = new ResourceUriPatternPredicate(pattern, true);
 
         List<Resource> jars = findJars(context);
         if (LOG.isDebugEnabled())
             LOG.debug("webapp {}={} jars {}", WEBINF_JAR_PATTERN, pattern, jars);
 
-        //Convert to uris for matching
+        // Only add matching Resources to metadata.webInfResources
         if (jars != null)
         {
-            List<URI> uris = new ArrayList<>();
-            int i = 0;
-            for (Resource r : jars)
-            {
-                uris.add(r.getURI());
-            }
-            matcher.match(uris);
+            jars.stream()
+                .filter(webinfPredicate)
+                .forEach(resource -> context.getMetaData().addWebInfResource(resource));
         }
     }
 
-    protected List<URI> getAllContainerJars(final WebAppContext context) throws URISyntaxException
+    protected List<URI> getAllContainerJars(final WebAppContext context)
     {
-        List<URI> uris = new ArrayList<>();
         ClassLoader loader = MetaInfConfiguration.class.getClassLoader();
+        List<URI> uris = new ArrayList<>();
         while (loader != null)
         {
-            if (loader instanceof URLClassLoader)
+            if (loader instanceof URLClassLoader urlCL)
             {
-                URL[] urls = ((URLClassLoader)loader).getURLs();
-                if (urls != null)
-                {
-                    for (URL url : urls)
-                        uris.add(new URI(url.toString().replaceAll(" ", "%20")));
-                }
+                URIUtil.streamOf(urlCL).forEach(uris::add);
             }
             loader = loader.getParent();
         }
@@ -321,14 +252,10 @@ public class MetaInfConfiguration extends AbstractConfiguration
         Set<Resource> resources = (Set<Resource>)context.getAttribute(RESOURCE_DIRS);
         if (resources != null && !resources.isEmpty())
         {
-            Resource[] collection = new Resource[resources.size() + 1];
-            int i = 0;
-            collection[i++] = context.getResourceBase();
-            for (Resource resource : resources)
-            {
-                collection[i++] = resource;
-            }
-            context.setBaseResource(new ResourceCollection(collection));
+            List<Resource> collection = new ArrayList<>();
+            collection.add(context.getBaseResource());
+            collection.addAll(resources);
+            context.setBaseResource(ResourceFactory.combine(collection));
         }
     }
 
@@ -339,7 +266,7 @@ public class MetaInfConfiguration extends AbstractConfiguration
         {
             Boolean attr = (Boolean)context.getServer().getAttribute(USE_CONTAINER_METAINF_CACHE);
             if (attr != null)
-                useContainerCache = attr.booleanValue();
+                useContainerCache = attr;
         }
 
         if (LOG.isDebugEnabled())
@@ -389,6 +316,7 @@ public class MetaInfConfiguration extends AbstractConfiguration
      * @param scanTypes the type of things to look for in the jars
      * @throws Exception if unable to scan the jars
      */
+    @SuppressWarnings("unchecked")
     public void scanJars(final WebAppContext context, Collection<Resource> jars, boolean useCaches, List<String> scanTypes)
         throws Exception
     {
@@ -400,19 +328,19 @@ public class MetaInfConfiguration extends AbstractConfiguration
             metaInfResourceCache = (ConcurrentHashMap<Resource, Resource>)context.getServer().getAttribute(CACHED_CONTAINER_RESOURCES);
             if (metaInfResourceCache == null)
             {
-                metaInfResourceCache = new ConcurrentHashMap<Resource, Resource>();
+                metaInfResourceCache = new ConcurrentHashMap<>();
                 context.getServer().setAttribute(CACHED_CONTAINER_RESOURCES, metaInfResourceCache);
             }
             metaInfFragmentCache = (ConcurrentHashMap<Resource, Resource>)context.getServer().getAttribute(CACHED_CONTAINER_FRAGMENTS);
             if (metaInfFragmentCache == null)
             {
-                metaInfFragmentCache = new ConcurrentHashMap<Resource, Resource>();
+                metaInfFragmentCache = new ConcurrentHashMap<>();
                 context.getServer().setAttribute(CACHED_CONTAINER_FRAGMENTS, metaInfFragmentCache);
             }
             metaInfTldCache = (ConcurrentHashMap<Resource, Collection<URL>>)context.getServer().getAttribute(CACHED_CONTAINER_TLDS);
             if (metaInfTldCache == null)
             {
-                metaInfTldCache = new ConcurrentHashMap<Resource, Collection<URL>>();
+                metaInfTldCache = new ConcurrentHashMap<>();
                 context.getServer().setAttribute(CACHED_CONTAINER_TLDS, metaInfTldCache);
             }
         }
@@ -420,77 +348,84 @@ public class MetaInfConfiguration extends AbstractConfiguration
         //Scan jars for META-INF information
         if (jars != null)
         {
-            for (Resource r : jars)
+            try (ResourceFactory.Closeable scanResourceFactory = ResourceFactory.closeable())
             {
-                if (scanTypes.contains(METAINF_RESOURCES))
-                    scanForResources(context, r, metaInfResourceCache);
-                if (scanTypes.contains(METAINF_FRAGMENTS))
-                    scanForFragment(context, r, metaInfFragmentCache);
-                if (scanTypes.contains(METAINF_TLDS))
-                    scanForTlds(context, r, metaInfTldCache);
+                for (Resource dir : jars)
+                {
+                    try
+                    {
+                        //If not already a directory, convert by mounting as jar file
+                        if (!dir.isDirectory())
+                            dir = scanResourceFactory.newJarFileResource(dir.getURI());
+                    }
+                    catch (Exception e)
+                    {
+                        //not an appropriate uri, skip it
+                        continue;
+                    }
+
+                    if (isEmptyResource(dir))
+                        continue;
+
+                    if (scanTypes.contains(METAINF_RESOURCES))
+                        scanForResources(context, dir, metaInfResourceCache);
+                    if (scanTypes.contains(METAINF_FRAGMENTS))
+                        scanForFragment(context, dir, metaInfFragmentCache);
+                    if (scanTypes.contains(METAINF_TLDS))
+                        scanForTlds(context, dir, metaInfTldCache);
+                }
             }
         }
     }
 
     /**
-     * Scan for META-INF/resources dir in the given jar.
+     * Scan for META-INF/resources dir in the given directory.
      *
      * @param context the context for the scan
-     * @param target the target resource to scan for
+     * @param dir the target directory to scan
      * @param cache the resource cache
-     * @throws Exception if unable to scan for resources
      */
-    public void scanForResources(WebAppContext context, Resource target, ConcurrentHashMap<Resource, Resource> cache)
-        throws Exception
+    public void scanForResources(WebAppContext context, Resource dir, ConcurrentHashMap<Resource, Resource> cache)
     {
+        // Resource target does not exist
+        if (isEmptyResource(dir))
+            return;
+
         Resource resourcesDir = null;
-        if (cache != null && cache.containsKey(target))
+
+        if (cache != null && cache.containsKey(dir))
         {
-            resourcesDir = cache.get(target);
-            if (resourcesDir == EmptyResource.INSTANCE)
+            resourcesDir = cache.get(dir);
+            if (isEmptyResource(resourcesDir))
             {
                 if (LOG.isDebugEnabled())
-                    LOG.debug("{} cached as containing no META-INF/resources", target);
+                    LOG.debug("{} cached as containing no META-INF/resources", dir);
                 return;
             }
             else if (LOG.isDebugEnabled())
-                LOG.debug("{} META-INF/resources found in cache ", target);
+                LOG.debug("{} META-INF/resources found in cache ", dir);
         }
         else
         {
             //not using caches or not in the cache so check for the resources dir
             if (LOG.isDebugEnabled())
-                LOG.debug("{} META-INF/resources checked", target);
-            if (target.isDirectory())
-            {
-                //TODO think  how to handle an unpacked jar file (eg for osgi)
-                resourcesDir = target.addPath("/META-INF/resources");
-            }
-            else
-            {
-                //Resource represents a packed jar
-                URI uri = target.getURI();
-                resourcesDir = Resource.newResource(uriJarPrefix(uri, "!/META-INF/resources"));
-            }
+                LOG.debug("{} META-INF/resources checked", dir);
 
-            if (!resourcesDir.exists() || !resourcesDir.isDirectory())
-            {
-                resourcesDir.close();
-                resourcesDir = EmptyResource.INSTANCE;
-            }
+            resourcesDir = dir.resolve("/META-INF/resources");
+
+            if (isEmptyResource(resourcesDir))
+                return;
+
+            //convert from an ephemeral Resource to one that is associated with the context's lifecycle
+            resourcesDir = context.getResourceFactory().newResource(resourcesDir.getURI());
 
             if (cache != null)
             {
-                Resource old = cache.putIfAbsent(target, resourcesDir);
+                Resource old = cache.putIfAbsent(dir, resourcesDir);
                 if (old != null)
                     resourcesDir = old;
                 else if (LOG.isDebugEnabled())
-                    LOG.debug("{} META-INF/resources cache updated", target);
-            }
-
-            if (resourcesDir == EmptyResource.INSTANCE)
-            {
-                return;
+                    LOG.debug("{} META-INF/resources cache updated", dir);
             }
         }
 
@@ -507,62 +442,59 @@ public class MetaInfConfiguration extends AbstractConfiguration
         dirs.add(resourcesDir);
     }
 
+    private static boolean isEmptyResource(Resource resourcesDir)
+    {
+        return !Resources.isReadableDirectory(resourcesDir);
+    }
+
     /**
-     * Scan for META-INF/web-fragment.xml file in the given jar.
+     * Scan for META-INF/web-fragment.xml file in the given directory.
      *
      * @param context the context for the scan
-     * @param jar the jar resource to scan for fragements in
+     * @param dir the dir to scan for fragments
      * @param cache the resource cache
-     * @throws Exception if unable to scan for fragments
      */
-    public void scanForFragment(WebAppContext context, Resource jar, ConcurrentHashMap<Resource, Resource> cache)
-        throws Exception
+    public void scanForFragment(WebAppContext context, Resource dir, ConcurrentHashMap<Resource, Resource> cache)
     {
         Resource webFrag = null;
-        if (cache != null && cache.containsKey(jar))
+        if (cache != null && cache.containsKey(dir))
         {
-            webFrag = cache.get(jar);
-            if (webFrag == EmptyResource.INSTANCE)
+            webFrag = cache.get(dir);
+            if (isEmptyFragment(webFrag))
             {
                 if (LOG.isDebugEnabled())
-                    LOG.debug("{} cached as containing no META-INF/web-fragment.xml", jar);
+                    LOG.debug("{} cached as containing no META-INF/web-fragment.xml", dir);
                 return;
             }
             else if (LOG.isDebugEnabled())
-                LOG.debug("{} META-INF/web-fragment.xml found in cache ", jar);
+                LOG.debug("{} META-INF/web-fragment.xml found in cache ", dir);
         }
         else
         {
             //not using caches or not in the cache so check for the web-fragment.xml
             if (LOG.isDebugEnabled())
-                LOG.debug("{} META-INF/web-fragment.xml checked", jar);
-            if (jar.isDirectory())
-            {
-                webFrag = Resource.newResource(new File(jar.getFile(), "/META-INF/web-fragment.xml"));
-            }
-            else
-            {
-                URI uri = jar.getURI();
-                webFrag = Resource.newResource(uriJarPrefix(uri, "!/META-INF/web-fragment.xml"));
-            }
-            if (!webFrag.exists() || webFrag.isDirectory())
-            {
-                webFrag.close();
-                webFrag = EmptyResource.INSTANCE;
-            }
+                LOG.debug("{} META-INF/web-fragment.xml checked", dir);
+
+            Resource metaInf = dir.resolve("META-INF");
+            if (isEmptyResource(metaInf))
+                return;
+
+            webFrag = metaInf.resolve("web-fragment.xml");
+
+            if (isEmptyFragment(webFrag))
+                return;
+
+            //convert ephemeral Resource to one associated with the context's lifecycle ResourceFactory
+            webFrag = context.getResourceFactory().newResource(webFrag.getURI());
 
             if (cache != null)
             {
-                //web-fragment.xml doesn't exist: put token in cache to signal we've seen the jar               
-                Resource old = cache.putIfAbsent(jar, webFrag);
+                Resource old = cache.putIfAbsent(dir, webFrag);
                 if (old != null)
                     webFrag = old;
                 else if (LOG.isDebugEnabled())
-                    LOG.debug("{} META-INF/web-fragment.xml cache updated", jar);
+                    LOG.debug("{} META-INF/web-fragment.xml cache updated", dir);
             }
-
-            if (webFrag == EmptyResource.INSTANCE)
-                return;
         }
 
         Map<Resource, Resource> fragments = (Map<Resource, Resource>)context.getAttribute(METAINF_FRAGMENTS);
@@ -571,59 +503,63 @@ public class MetaInfConfiguration extends AbstractConfiguration
             fragments = new HashMap<Resource, Resource>();
             context.setAttribute(METAINF_FRAGMENTS, fragments);
         }
-        fragments.put(jar, webFrag);
+
+        if (dir instanceof MountedPathResource)
+        {
+            //ensure we link from the original .jar rather than jar:file:
+            dir = context.getResourceFactory().newResource(((MountedPathResource)dir).getContainerPath());
+        }
+        
+        fragments.put(dir, webFrag);
         if (LOG.isDebugEnabled())
             LOG.debug("{} added to context", webFrag);
     }
 
+    private static boolean isEmptyFragment(Resource webFrag)
+    {
+        return !Resources.isReadableFile(webFrag);
+    }
+
     /**
-     * Discover META-INF/*.tld files in the given jar
+     * Discover META-INF/*.tld files in the given directory
      *
      * @param context the context for the scan
-     * @param jar the jar resources to scan tlds for
+     * @param dir the directory resource to scan for .tlds
      * @param cache the resource cache
-     * @throws Exception if unable to scan for tlds
+     * @throws Exception if unable to scan for .tlds
      */
-    public void scanForTlds(WebAppContext context, Resource jar, ConcurrentHashMap<Resource, Collection<URL>> cache)
+    public void scanForTlds(WebAppContext context, Resource dir, ConcurrentHashMap<Resource, Collection<URL>> cache)
         throws Exception
     {
-        Collection<URL> tlds = null;
+        Collection<URL> tlds;
 
-        if (cache != null && cache.containsKey(jar))
+        if (cache != null && cache.containsKey(dir))
         {
-            Collection<URL> tmp = cache.get(jar);
+            Collection<URL> tmp = cache.get(dir);
             if (tmp.isEmpty())
             {
                 if (LOG.isDebugEnabled())
-                    LOG.debug("{} cached as containing no tlds", jar);
+                    LOG.debug("{} cached as containing no tlds", dir);
                 return;
             }
             else
             {
                 tlds = tmp;
                 if (LOG.isDebugEnabled())
-                    LOG.debug("{} tlds found in cache ", jar);
+                    LOG.debug("{} tlds found in cache ", dir);
             }
         }
         else
         {
             //not using caches or not in the cache so find all tlds
-            tlds = new HashSet<URL>();
-            if (jar.isDirectory())
-            {
-                tlds.addAll(getTlds(jar.getFile()));
-            }
-            else
-            {
-                URI uri = jar.getURI();
-                tlds.addAll(getTlds(uri));
-            }
+            tlds = new HashSet<>();
+            tlds.addAll(getTlds(context, dir));
 
             if (cache != null)
             {
                 if (LOG.isDebugEnabled())
-                    LOG.debug("{} tld cache updated", jar);
-                Collection<URL> old = (Collection<URL>)cache.putIfAbsent(jar, tlds);
+                    LOG.debug("{} tld cache updated", dir);
+                Collection<URL> old = cache.putIfAbsent(dir, tlds);
                 if (old != null)
                     tlds = old;
             }
@@ -635,7 +571,7 @@ public class MetaInfConfiguration extends AbstractConfiguration
         Collection<URL> metaInfTlds = (Collection<URL>)context.getAttribute(METAINF_TLDS);
         if (metaInfTlds == null)
         {
-            metaInfTlds = new HashSet<URL>();
+            metaInfTlds = new HashSet<>();
             context.setAttribute(METAINF_TLDS, metaInfTlds);
         }
         metaInfTlds.addAll(tlds);
@@ -654,65 +590,32 @@ public class MetaInfConfiguration extends AbstractConfiguration
     }
 
     /**
-     * Find all .tld files in all subdirs of the given dir.
+     * Find all .tld files in the given directory.
      *
-     * @param dir the directory to scan
-     * @return the list of tlds found
-     * @throws IOException if unable to scan the directory
-     */
-    public Collection<URL> getTlds(File dir) throws IOException
-    {
-        if (dir == null || !dir.isDirectory())
-            return Collections.emptySet();
-
-        HashSet<URL> tlds = new HashSet<URL>();
-
-        File[] files = dir.listFiles();
-        if (files != null)
-        {
-            for (File f : files)
-            {
-                if (f.isDirectory())
-                    tlds.addAll(getTlds(f));
-                else
-                {
-                    String name = f.getCanonicalPath();
-                    if (name.contains("META-INF") && name.endsWith(".tld"))
-                        tlds.add(f.toURI().toURL());
-                }
-            }
-        }
-        return tlds;
-    }
-
-    /**
-     * Find all .tld files in the given jar.
-     *
-     * @param uri the uri to jar file
+     * @param dir the directory
      * @return the collection of tlds as url references
      * @throws IOException if unable to scan the jar file
      */
-    public Collection<URL> getTlds(URI uri) throws IOException
+    private Collection<URL> getTlds(WebAppContext context, Resource dir) throws IOException
     {
-        HashSet<URL> tlds = new HashSet<URL>();
+        HashSet<URL> tlds = new HashSet<>();
 
-        String jarUri = uriJarPrefix(uri, "!/");
-        URL url = new URL(jarUri);
-        JarURLConnection jarConn = (JarURLConnection)url.openConnection();
-        jarConn.setUseCaches(Resource.getDefaultUseCaches());
-        JarFile jarFile = jarConn.getJarFile();
-        Enumeration<JarEntry> entries = jarFile.entries();
-        while (entries.hasMoreElements())
+        Resource metaInf = dir.resolve("META-INF");
+        if (isEmptyResource(metaInf))
+            return tlds; //no tlds
+
+        try (Stream<Path> stream = Files.walk(metaInf.getPath()))
         {
-            JarEntry e = entries.nextElement();
-            String name = e.getName();
-            if (name.startsWith("META-INF") && name.endsWith(".tld"))
+            Iterator<Path> it = stream
+                .filter(Files::isRegularFile)
+                .filter(FileID::isTld)
+                .iterator();
+            while (it.hasNext())
             {
-                tlds.add(new URL(jarUri + name));
+                Path entry = it.next();
+                tlds.add(entry.toUri().toURL());
             }
         }
-        if (!Resource.getDefaultUseCaches())
-            jarFile.close();
         return tlds;
     }
 
@@ -722,14 +625,12 @@ public class MetaInfConfiguration extends AbstractConfiguration
         if (context == null)
             return null;
 
-        List<Resource> classDirs = new ArrayList<Resource>();
+        List<Resource> classDirs = new ArrayList<>();
 
         Resource webInfClasses = findWebInfClassesDir(context);
         if (webInfClasses != null)
             classDirs.add(webInfClasses);
-        List<Resource> extraClassDirs = findExtraClasspathDirs(context);
-        if (extraClassDirs != null)
-            classDirs.addAll(extraClassDirs);
+        classDirs.addAll(findExtraClasspathDirs(context));
 
         return classDirs;
     }
@@ -744,10 +645,7 @@ public class MetaInfConfiguration extends AbstractConfiguration
     protected List<Resource> findJars(WebAppContext context)
         throws Exception
     {
-        List<Resource> jarResources = new ArrayList<Resource>();
-        List<Resource> webInfLibJars = findWebInfLibJars(context);
-        if (webInfLibJars != null)
-            jarResources.addAll(webInfLibJars);
+        List<Resource> jarResources = new ArrayList<>(findWebInfLibJars(context));
         List<Resource> extraClasspathJars = findExtraClasspathJars(context);
         if (extraClasspathJars != null)
             jarResources.addAll(extraClasspathJars);
@@ -764,39 +662,26 @@ public class MetaInfConfiguration extends AbstractConfiguration
     protected List<Resource> findWebInfLibJars(WebAppContext context)
         throws Exception
     {
-        Resource webInf = context.getWebInf();
-        if (webInf == null || !webInf.exists())
-            return null;
+        if (context == null)
+            return List.of();
 
-        List<Resource> jarResources = new ArrayList<Resource>();
-        Resource webInfLib = webInf.addPath("/lib");
-        if (webInfLib.exists() && webInfLib.isDirectory())
+        Resource webInf = context.getWebInf();
+        if (webInf == null || !webInf.exists() || !webInf.isDirectory())
+            return List.of();
+
+        Resource webInfLib = webInf.resolve("lib");
+
+        if (Resources.isReadableDirectory(webInfLib))
         {
-            String[] files = webInfLib.list();
-            if (files != null)
-            {
-                Arrays.sort(files);
-            }
-            for (int f = 0; files != null && f < files.length; f++)
-            {
-                try
-                {
-                    Resource file = webInfLib.addPath(files[f]);
-                    String fnlc = file.getName().toLowerCase(Locale.ENGLISH);
-                    int dot = fnlc.lastIndexOf('.');
-                    String extension = (dot < 0 ? null : fnlc.substring(dot));
-                    if (extension != null && (extension.equals(".jar") || extension.equals(".zip")))
-                    {
-                        jarResources.add(file);
-                    }
-                }
-                catch (Exception ex)
-                {
-                    LOG.warn("Unable to load WEB-INF file {}", files[f], ex);
-                }
-            }
+            return webInfLib.list().stream()
+                .filter((lib) -> FileID.isLibArchive(lib.getFileName()))
+                .sorted(ResourceCollators.byName(true))
+                .collect(Collectors.toList());
         }
-        return jarResources;
+        else
+        {
+            return List.of();
+        }
     }
 
     /**
@@ -804,10 +689,8 @@ public class MetaInfConfiguration extends AbstractConfiguration
      *
      * @param context the context to find extra classpath jars in
      * @return the list of Resources with the extra classpath, or null if not found
-     * @throws Exception if unable to resolve the extra classpath jars
      */
     protected List<Resource> findExtraClasspathJars(WebAppContext context)
-        throws Exception
     {
         if (context == null || context.getExtraClasspath() == null)
             return null;
@@ -832,14 +715,13 @@ public class MetaInfConfiguration extends AbstractConfiguration
             return null;
 
         Resource webInf = context.getWebInf();
-
         // Find WEB-INF/classes
-        if (webInf != null && webInf.isDirectory())
+        if (Resources.isReadableDirectory(webInf))
         {
             // Look for classes directory
-            Resource classes = webInf.addPath("classes/");
-            if (classes.exists())
-                return classes;
+            Resource webInfClassesDir = webInf.resolve("classes/");
+            if (Resources.isReadableDirectory(webInfClassesDir))
+                return webInfClassesDir;
         }
         return null;
     }
@@ -849,13 +731,11 @@ public class MetaInfConfiguration extends AbstractConfiguration
      *
      * @param context the context to look for extra classpaths in
      * @return the list of Resources to the extra classpath
-     * @throws Exception if unable to resolve the extra classpath resources
      */
     protected List<Resource> findExtraClasspathDirs(WebAppContext context)
-        throws Exception
     {
         if (context == null || context.getExtraClasspath() == null)
-            return null;
+            return List.of();
 
         return context.getExtraClasspath()
             .stream()
@@ -863,39 +743,8 @@ public class MetaInfConfiguration extends AbstractConfiguration
             .collect(Collectors.toList());
     }
 
-    private String uriJarPrefix(URI uri, String suffix)
-    {
-        String uriString = uri.toString();
-        if (uriString.startsWith("jar:"))
-        {
-            return uriString + suffix;
-        }
-        else
-        {
-            return "jar:" + uriString + suffix;
-        }
-    }
-
     private boolean isFileSupported(Resource resource)
     {
-        try
-        {
-            if (resource.isDirectory())
-                return false;
-
-            if (resource.getFile() == null)
-                return false;
-        }
-        catch (Throwable t)
-        {
-            if (LOG.isDebugEnabled())
-                LOG.debug("Bad Resource reference: {}", resource, t);
-            return false;
-        }
-
-        String filenameLowercase = resource.getName().toLowerCase(Locale.ENGLISH);
-        int dot = filenameLowercase.lastIndexOf('.');
-        String extension = (dot < 0 ? null : filenameLowercase.substring(dot));
-        return (extension != null && (extension.equals(".jar") || extension.equals(".zip")));
+        return FileID.isLibArchive(resource.getURI());
     }
 }
